more home page updates

--- a/index.html
+++ b/index.html
@@ -76,51 +76,51 @@
                 </p>
                 
             </div>
+
+            
             <h4 class="ss-heading">Site Sections</h4>
             <div class="ss-content">
+
+                <p>
+                    Navigate interactive primary ballots that provides concise but
+                        comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
+                        policy positions into an easily understandable format.
+                </p>
+
                 <ul class="ss-ol">
 
-                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary For 2 Commissioner Seats</a></strong> 
-                        Navigate an interactive primary ballot that provides concise but
-                        comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
-                        policy positions into an easily understandable format.</li>
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary For 2 Commissioner Seats</a></strong> </li>
 
-                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
-                        straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
+                    <!-- <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
+                        straightforward manner, allowing you to quickly gauge where each candidate stands.</li> -->
 
-                        <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary for 1 US Senate Seat</a></strong> 
-                            Navigate an interactive primary ballot that provides concise but
-                            comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
-                            policy positions into an easily understandable format.</li>
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary for 1 US Senate Seat</a></strong> </li>
 
-                            <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary for 1 US Senate Seat</a></strong> 
-                                Navigate an interactive primary ballot that provides concise but
-                                comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
-                                policy positions into an easily understandable format.</li>
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary for 1 US Senate Seat</a></strong> </li>
 
-                                <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary for 1 US House of Representatives Seat</a></strong> 
-                                    Navigate an interactive primary ballot that provides concise but
-                                    comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
-                                    policy positions into an easily understandable format.</li>
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary for 1 US House of Representatives Seat</a></strong> </li>
 
-                                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_president_demprimary.html">Democrat Primary for US President</a></strong> 
-                                        Navigate an interactive primary ballot that provides concise but
-                                        comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
-                                        policy positions into an easily understandable format.</li>
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_president_demprimary.html">Democrat Primary for US President</a></strong> </li>
                     <!-- <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Election</a></strong> Navigate an interactive primary ballot that provides concise but
                         comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                         policy positions into an easily understandable format.</li>
                     <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_issues.html">Vineland School Board Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
                         straightforward manner, allowing you to quickly gauge where each candidate stands.</li> -->
+
+                    <p> Learn more about local politics and the inspiration for the site</p>
+
                     <li class="ss-li"><strong><a href="child_pages/get-involved.html">Get Involved</a></strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
                         consolidated calendar guides you to meaningful opportunities for community and
                         political engagement.</li>
+
                     <li class="ss-li"><strong><a href="child_pages/about.html">Our Process</a></strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
                         Our journey to advocate for improved community engagement, transparency, and
                         accountability has been long but is a shared responsibility—one that should be easier to
                         undertake, but often isn&#39;t.</li>
+
                     <li class="ss-li"><strong><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions </a></strong>While Inform The Vote has made many attempts to contact candidates for 
                     further information, we are still left with several unanswered questions.</li>
+
                     <li class="ss-li"><strong><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed </a></strong>With election season coming to an end, what might be one active voter's take on possibly the most important event of the campaign season be?</li>
                 </ul>
             </div>
