fixed bashaws campaign site url link typo

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -59,7 +59,7 @@
     <div class="candidate-agenda">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://https://www.bashawforussenate..com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
+                <a href="https://www.bashawforussenate..com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
                 
                 <a href="https://www.facebook.com/BashawforSenate" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
