vallorosi twitter link added

--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -61,6 +61,7 @@
             <div class="website">
                 <a href="https://votepeter.us/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
                 <a href="https://www.facebook.com/peter.vallorosi/photos_by" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                <a href="https://twitter.com/PVallorosi" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
                 <a href="https://newjerseyglobe.com/congress/gop-senate-candidate-says-hell-withdraw-following-petition-challenge-from-serrano-glassner-campaign/" target="_blank" rel="noopener noreferrer" class="website-link">NJ Globe Withdrawal Article</a>
             </div>
 
