--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -69,6 +69,18 @@
             <br>
             <br>
             
+            <div class="agenda-per-party-site">
+                <h4> Public Events </h4>
+                <div class="event-card">
+                    <ul class="event-info">
+                        <li class="name"><strong>Campaign Meet-n-Greet, Ocean County Ravioli Fest</strong></li>
+                        <li class="description">Opportunity to meet Candidate Murphy.</li>
+                        <li class="date-and-time">04/26/24 - 4pm</li>
+                        <li class="location">499 N. Main Street, Barnegat, NJ 08005</li>
+                    </ul>
+                </div>
+            </div>
+
             <h4 class="sub-heading">individual  agenda</h4>
             <div class="agenda-thesis">
                 <ul class="testa-agenda">
