events added to smith,perella, and events pages

--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -76,7 +76,7 @@
                         <li class="name"><strong>Campaign Meet-n-Greet, Ocean County Ravioli Fest</strong></li>
                         <li class="description">Opportunity to meet Candidate Murphy.</li>
                         <li class="date-and-time">04/26/24 - 4pm</li>
-                        <li class="location">499 N. Main Street, Barnegat, NJ 08005</li>
+                        <li class="location">American Legion, 499 N. Main Street, Barnegat, NJ 08005</li>
                     </ul>
                 </div>
             </div>
