--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -69,6 +69,21 @@
         <br>
         <br>
 
+        <div class="agenda-per-party-site">
+            <h4> Public Events </h4>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Campaign Meet-n-Greet, "Charting our Course"</strong></li>
+                    <li class="description">Opportunity to meet Candidates Smith and Perella. <a href="https://www.facebook.com/photo/?fbid=122101378400285633&set=gm.1102696227510284">Details on Facebook</a></li>
+                    <li class="date-and-time">5/2/24 - 4:30 pm</li>
+                    <li class="location">Bayshore Center at Bivalve - 2800 High Street, Port Norris, NJ 08349</li>
+                </ul>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
         <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
                 Supports Planned Parenthood. <a href="https://www.facebook.com/ld1njvote/posts/pfbid02SsnRk2YTaTY5XPjtV2Q3HH1Spsnm8FpJUHVTAf94JNneBiWBHxmQVMQxVnSsbZsbl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
