--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -71,6 +71,21 @@
         <br>
         <br>
 
+        <div class="agenda-per-party-site">
+            <h4> Public Events </h4>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Campaign Meet-n-Greet, "Charting our Course"</strong></li>
+                    <li class="description">Opportunity to meet Candidates Smith and Perella. <a href="https://www.facebook.com/photo/?fbid=122101378400285633&set=gm.1102696227510284">Details on Facebook</a></li>
+                    <li class="date-and-time">5/2/24 - 4:30 pm</li>
+                    <li class="location">Bayshore Center at Bivalve - 2800 High Street, Port Norris, NJ 08349</li>
+                </ul>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 <p>Wants to create economic opportunity for Cumberland County through invesment in the Bayshore Economy.
