--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -46,122 +46,53 @@
 
     <div class="container">
         <div class="main-content-with-box-shadow-events">
-            <h1 class="events-h1">Events</h1>            
+            <h1 class="events-h1">Events</h1>  
+
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>NAACP Candidates Forum</strong></li>
-                    <li class="description">Opportunity to get exposure to the candidates in a specific election related event.</li>
-                    <li class="date-and-time">10/16/23 - 6–9 PM</li>
-                    <li class="location">Bridgeton High School - 111 West Ave N, Bridgeton, NJ 08302</li>
+                    <li class="name"><strong>Campaign Meet-n-Greet, Ocean County Ravioli Fest</strong></li>
+                    <li class="description">Opportunity to meet Candidate Murphy.</li>
+                    <li class="date-and-time">04/26/24 - 4pm</li>
+                    <li class="location">American Legion, 499 N. Main Street, Barnegat, NJ 08005</li>
                 </ul>
             </div>
+
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Meet and Greet Cumberland Democratic Candidates</strong></li>
-                    <li class="description">Opportunity to get exposure to the democrat candidates.</li>
-                    <li class="date-and-time">10/20/23 - 5-8 PM</li>
-                    <li class="location">BME, 1554 S Delsea Dr, Vineland</li>
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
+                    <li class="date-and-time">04/27/24 - 8:30 am</li>
+                    <li class="location">Mauricetown Fire Hall, 9544 Noble St, Mauricetown, NJ, 08329</li>
                 </ul>
             </div>
+
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Republican Breakfast</strong></li>
-                    <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
-                    <li class="date-and-time">10/21/23 - 8:30 am</li>
-                    <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland NJ 08361</li>
+                    <li class="name"><strong>Campaign Meet-n-Greet, "Charting our Course"</strong></li>
+                    <li class="description">Opportunity to meet Candidates Smith and Perella. <a href="https://www.facebook.com/photo/?fbid=122101378400285633&set=gm.1102696227510284">Details on Facebook</a></li>
+                    <li class="date-and-time">5/2/24 - 4:30 pm</li>
+                    <li class="location">Bayshore Center at Bivalve - 2800 High Street, Port Norris, NJ 08349</li>
                 </ul>
             </div>
+
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Bayshore Bash</strong></li>
-                    <li class="description">
-                        Republican Campaign Event. Apparently there is a $125 cover, probably minimum donation, 
-                        and an RSVP required. However, the event was learned of from a printed flyer with no accessible link and no 
-                        reseveration details were provided on the <a href="https://www.ccrrogop.org/event-calendar">CCRROGOP Calendar</a>.
-                    </li>
-                    <li class="date-and-time">10/21/23 - 12:30-3:00pm/li>
-                    <li class="location">Charlesworth Hotel, 224 New Jersey Ave., Fortescue, NJ 08321</li>
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
+                    <li class="date-and-time">05/11/24 - 8:30 am</li>
+                    <li class="location">Eastly Greenview Inn, 4049 Italia Ave, Vineland, NJ 08361</li>
                 </ul>
             </div>
+
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Atlantic County Meet & Greet</strong></li>
-                    <li class="description">Event posted by Mike Testa on Facebook. "Meet us at Estell Manor Park in Atlantic County and let's make memories as we discuss our vision for a brighter future". Follow the link to the post to RSVP, where an internal link under the 'tickets' section is provided.</li>
-                    <li class="date-and-time">10/23/23 - 6pm</li>
-                    <li class="location">Estell Manor Park, 109 NJ-50, Mays Landing, NJ 08330</li>
-                    <li><a href="https://www.facebook.com/events/699714028317537?ref=newsfeed">Facebook Event Link</a></li>
+                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
+                    <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
+                    <li class="date-and-time">05/25/24 - 8:30 am</li>
+                    <li class="location">Mauricetown Fire Hall, 9544 Noble St, Mauricetown, NJ, 08329</li>
                 </ul>
             </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Taco Tuesday at Milly's</strong></li>
-                    <li class="description">Event posted by Mike Testa on Facebook. "Join us at Milly's for "Taco Tuesday"". Follow the link to the post to RSVP, where an internal link under the 'tickets' section is provided.</li>
-                    <li class="date-and-time">10/24/23 - 6pm</li>
-                    <li class="location">Milly's Restaurant, 602 E. Chestnut Ave, Vineland, NJ 08360</li>
-                    <li><a href="https://www.facebook.com/events/197128753402195/?ref=newsfeed">Facebook Event Link</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Regular Commissioner Board Meeting</strong></li>
-                    <li class="description">Meetings where County Commissioners vote on current legislation. Time is given for county residents to comment publicly.</li>
-                    <li class="date-and-time">10/24/23 - 6pm</li>
-                    <li class="location">Cumberland County Courthouse - 60 W. Broad Street, Courtroom 312, Bridgeton, NJ 08302</li>
-                    <li><a href="https://www.cumberlandcountynj.gov/meetings">Meeting Info on County Calendar</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Republican LD-1 Re-election Reception</strong></li>
-                    <li class="description">A reception to support the re-election of the Republican incumbents for Senate and Assembly. Follow the links to RSVP. Donation required.</li>
-                    <li class="date-and-time">10/25/23 - 6pm</li>
-                    <li class="location">Congress Hall, 200 Congress Place, Cape May, NJ 08204</li>
-                    <li><a href="https://www.facebook.com/photo/?fbid=216595691432853&set=a.134081569684266">Facebook</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Democrat Fundraiser and Wine Tasting</strong></li>
-                    <li class="description">A reception to support local democrats, including White-Morris and Bonner for assembly. $50 donation required. RSVP to LowerDems@gmail.com or 609-594-4155</li>
-                    <li class="date-and-time">10/25/23 - 7-9pm</li>
-                    <li class="location">900 Holmes Ave., North Cape May</li>
-                    <li><a href="https://secure.anedot.com/contribute-testa-for-senate/ld1-reception-2023?fbclid=IwAR1FWskRgBPLCuKS8Ethqj0P0IekD-k7rrIo6R4nsBx66djGWm7naoixzdw">Meeting Info on County Calendar</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Vineland School Board Meeting</strong></li>
-                    <li class="description">Stay up to date on the current issues for Vineland Public Schools.</li>
-                    <li class="date-and-time">11/01/23 6pm - 8pm</li>
-                    <li class="location">Landis Administration Building, formerly Landis School. 61 W Landis Ave, Vineland NJ</li>
-                    <li><a href="https://drive.google.com/file/d/1biAjJHa3U1YbB07DljuvGbwLNoCJYFEL/view">Posted Meeting</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Scoops and Politics</strong></li>
-                    <li class="description">An event posted by Mike Testa on Facebook. This MIGHT be a chance to meet incumbents Simonsen and Mclellan. Follow info at Facebook event link to RSVP, which is provided under the tickets section.</li>
-                    <li class="date-and-time">11/02/23 6pm - 8pm</li>
-                    <li class="location">800 Ocean Ave, Ocean City, NJ 08226</li>
-                    <li><a href="https://www.facebook.com/events/340466595067196?ref=newsfeed">Facebook Event Link</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Republican Breakfast</strong></li>
-                    <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
-                    <li class="date-and-time">11/04/23 - 8:30am</li>
-                    <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland NJ 08361</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Vote! Or don't...</strong></li>
-                    <li class="description">Election day. If you feel you have enough info, go vote.</li>
-                    <li class="date-and-time">11/07/23</li>
-                    <li class="location">Wherever your voting location is.</li>
-                </ul>
-            </div>
+
         </div>
     </div>
 </body>
