facebook link for murphys meet n greet added

--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -74,7 +74,7 @@
                 <div class="event-card">
                     <ul class="event-info">
                         <li class="name"><strong>Campaign Meet-n-Greet, Ocean County Ravioli Fest</strong></li>
-                        <li class="description">Opportunity to meet Candidate Murphy.</li>
+                        <li class="description">Opportunity to meet Candidate Murphy. <a href="https://www.facebook.com/events/441835328257615?acontext=%7B%22event_action_history%22%3A[%7B%22surface%22%3A%22home%22%7D%2C%7B%22mechanism%22%3A%22your_upcoming_events_unit%22%2C%22surface%22%3A%22bookmark%22%7D]%2C%22ref_notif_type%22%3Anull%7D">Details on Facebook</a></li>
                         <li class="date-and-time">04/26/24 - 4pm</li>
                         <li class="location">American Legion, 499 N. Main Street, Barnegat, NJ 08005</li>
                     </ul>
