get out the vote and voting day events added

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -81,6 +81,15 @@
                     <li class="location">Bayshore Center at Bivalve - 2800 High Street, Port Norris, NJ 08349</li>
                 </ul>
             </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Get Out The Vote Calling</strong></li>
+                    <li class="description">Help the candidates get votes <a href="https://www.facebook.com/timalexanderforcongress/posts/pfbid02Q4QHbHCaDwJ3uLe5Qx9CyRgBe1ErQc1Sa6C9Tem1Z79Drzq8h5YG1d5AK1hrokZZl">Details on Facebook</a></li>
+                    <li class="date-and-time">6/4/24 - 9 am</li>
+                    <li class="location">No physical address provided</li>
+                </ul>
+            </div>
         </div>
 
         <br>
