--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -93,6 +93,23 @@
                 </ul>
             </div>
 
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Get Out The Vote Calling - Democrats</strong></li>
+                    <li class="description">Help the candidates get votes <a href="https://www.facebook.com/timalexanderforcongress/posts/pfbid02Q4QHbHCaDwJ3uLe5Qx9CyRgBe1ErQc1Sa6C9Tem1Z79Drzq8h5YG1d5AK1hrokZZl">Details on Facebook</a></li>
+                    <li class="date-and-time">6/4/24 - 9 am</li>
+                    <li class="location">No physical address provided</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Vote!</strong></li>
+                    <li class="description">Go vote</li>
+                    <li class="date-and-time">6/4/24 - 9 am</li>
+                    <li class="location">Check where your voting location is</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
