--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -59,7 +59,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://drperellaforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
+            <a href="https://perellaandsmithforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link">Perella-Smith Campaign Site</a>
             <a href="https://www.facebook.com/profile.php?id=61558568992749" target="_blank" rel="noopener noreferrer" class="website-link">Perella-Smith Facebook</a>
             <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
             <a href="https://www.facebook.com/dr.perellaforcumberland" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
