revamp of austinos page with modal summary test

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -10,6 +10,22 @@
         <title>Inform The Vote</title>
     </head>
     <body>
+
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>The quick summary for Candidate Austino: Former Sheriff Austino is a democrat who appears to be running with former commissioner Capizola 
+                'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
+                commissioner. There seems to be no easily accessible information regarding his platform or agenda, and Inform the Vote has not yet received a
+                response from him regarding campaign related information. A surface level guess would be that Austino and Capizola would be more center-left 
+                than Perella and Smith, but we cannot verify that at the moment. 
+              </p>
+            </div>
+          
+          </div>
+
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
             <div class="hamburger">
@@ -68,7 +84,8 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Wants to develop community outreach project for youth and seniors.
+                As of 4/22/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There seems to be no 
+                relevant information about his specific agenda for being a County Commissioner.
             </div>
 
             <br>
@@ -84,10 +101,9 @@
 
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform The Vote was able to speak with Austino at Deerfield Day. Stated he helped develop policies over the years but did not go into detail on such policies.
-                Was instrumental in Vineland Police Department becoming first accredited department in the state of NJ. Wants to develop community outreach project for youth and seniors.
-                <br>
-                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
+                As of 4/22/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There seems to be no 
+                specific information about his policy ideas for his potential election as County Commissioner.
+
             </div>
 
             <br>
@@ -105,18 +121,32 @@
             <br>
             <br>
 
-            <h4 class="sub-heading">Candidates Forum Statements</h4>
-            <div class="experience">
-                When asked about improving police relations with the public, Austino spoke about having a community policing unit and 
-                providing youth based activities.
-            </div>
-
-                <br>
-                <br>
-
             <h4 class="sub-heading">Recent Radio Interview</h4>
             <div class="experience">
                 <a href="https://www.facebook.com/photo/?fbid=122101378400285633&set=gm.1102696227510284">Around South Jersey with Jim Quinn</a>
+
+                <br>
+                <br>
+
+                <h5>Summary</h5>
+
+                <br>
+                <p>The former Sheriff and Jim Quinn spent approximately the first 30 minutes talking about the Sheriffs prior experience as a Sheriff and 
+                    reminiscing about local politics. Of note, they mentioned that the former Sheriff helped get accreditation to the Sheriff's office, which
+                    helped put formal, state recognized policies in place and maintain modern standards through the years. Quinn used to be a mayor and freeholder,
+                    so he was able to offer kind words about how helpful the former Sheriff was throughout the years. 
+                    <br>
+                    They spent some time defining what the role of the Sheriff's office is, which seems to be broken down into 3 categories:
+                    <br>
+                        1. Protecting the courthouses
+                    <br>
+                        2. Serving warrants
+                    <br>
+                        3. Communications division
+                        <br>
+
+                        All in all, there wasn't much directly related to making a choice in the democrat primary for county commissioner.
+                </p>
             </div>
 
             <h4 class="sub-heading">Stance on Vineland Police Department Staffing Issues</h4>
