revamped smith and perellas pages, also added summaries

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -71,6 +71,25 @@
         <br>
         <br>
 
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>The quick summary for Candidate Perella: Dr. Perella seems to be running with Candidate Smith 'against' former Sheriff Austino and former 
+                commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
+                Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
+                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. It is also 
+                worth noting that Dr. Perella has been one of the better candidates in regards to regular communication with Inform the Vote. Scroll down for 
+                more in-depth information and sources.
+              </p>
+            </div>
+          
+          </div>
+
+          <br>
+          <br>
+
         <div class="agenda-per-party-site">
             <h4> Public Events </h4>
             <div class="event-card">
@@ -159,9 +178,16 @@
 
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                <p>Inform the Vote spoke with Perella at Deerfield Day. Seems to be very focused on public water and sewage issues in county. The cost of getting sewage and water up to code for residences and businesses is so high currently that it is preventing new business investment and the sale of residences. Perella is suggesting applying for federal grants to expand water and sewage.</p>
-                <p>It is the opinion of Inform the Vote that this candidate is one of the only candidates in this year's election to clearly explain their action plan for implementing their agenda. Spoke at Deerfield Day and multiple Middle Mile Committee Meetings, in regards to their agenda to expand broadand internet access. Believes that in the year 2023 internet access is integral to the community. While acknowledging that the Middle Mile will not connect the end user, she believes it is an essential first step in the process and proper oversight will be conducted.</p>
-                <p>Also mentioned their commitment to bringing awareness to mental illness, depression, and suicide. Her implementation plan is to get more social workers and counselors into county schools.</p>
+                <p>Inform the Vote spoke with Perella at Deerfield Day. Seems to be very focused on public water and sewage issues in the county. The cost of 
+                    getting sewage and water up to code for residences and businesses is so high currently that it is preventing new business investment and 
+                    the sale of residences. Perella is suggesting applying for federal grants to expand water and sewage.</p>
+                <p>It is the opinion of Inform the Vote that this candidate is one of the only candidates in this year's election to clearly explain their 
+                    action plan for implementing their agenda. Spoke at Deerfield Day and multiple Middle Mile Committee Meetings, in regards to their agenda 
+                    to expand broadand internet access. Believes that in the year 2023 internet access is integral to the community. While acknowledging that 
+                    the Middle Mile will not connect the end user, she believes it is an essential first step in the process and proper oversight will be 
+                    conducted.</p>
+                <p>Also mentioned their commitment to bringing awareness to mental illness, depression, and suicide. Her implementation plan is to get more 
+                    social workers and counselors into county schools.</p>
             </div>
 
             <br>
