--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -39,6 +39,29 @@
                 </div>
             </div>
         </div>
+
+        <br>
+        <br>
+
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>The quick summary for Candidate Perella: Dr. Perella seems to be running with Candidate Smith 'against' former Sheriff Austino and former 
+                commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
+                Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
+                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. It is also 
+                worth noting that Dr. Perella has been one of the better candidates in regards to regular communication with Inform the Vote. Scroll down for 
+                more in-depth information and sources.
+              </p>
+            </div>
+          
+          </div>
+
+          <br>
+          <br>
+
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
@@ -117,8 +140,7 @@
 
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform The Vote has reached out to this candidate through numerous means and have
-                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
+                Ms. Smith recently has responded to an email from Inform the Vote in regards to more information and she has said that she will respond soon.
             </div>
 
             <br>
