basic summary added to dem primary for commissioner ballot page

--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -42,7 +42,31 @@
         </div>
     </div>
 
+    <br>
+    <br>
+
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>The quick summary for the Democrat Primary for County Commissioner: This year 2 seats are open on the County Commissioner board. The reppublicans
+            are running two incumbents, and the democrats appear to have two separate two person teams: Former Sheriff Austino and former Commissioner Capizola
+            'vs' Dr. Perella and Ms. La Rae Smith. The two republican incumbents inherently have experience, so it is the opinion of Inform the Vote that there 
+            ought to be some kind of discussion as to why challengers would be significantly better or different. Capizola and Austino have more direct experience 
+            than Smith and Perella, but Smith and Perella seem to have a much more transparent agenda and have been better about communicating with us. Scroll down and 
+            click on the candidates names for more in-depth information.
+          </p>
+        </div>
+      
+      </div>
+
+      <br>
+      <br>
+
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+
+
     <div id="sample-ballot">
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: June 4th, 2024</h3>
