quick summary for albert harshaw

--- a/child_pages/cc-elections/Candidates/harshaw.html
+++ b/child_pages/cc-elections/Candidates/harshaw.html
@@ -68,6 +68,21 @@
 
             <br>
             <br>
+
+            <div id="myModal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <p>The quick summary for Candidate Harshaw: Albert Harshaw is a Republican candidate for US Senate. He is a highly decorated military vet with
+                    who was an international business law major and is certified in maritime law. He has very detailed information on his site regarding not only
+                    his specific policy ideas, but also how he plans on achieving those policy ideas. His policy proposals range from rebuilding manufacturing, 
+                    agriculture, and overall infrastructure, to investing in childhood education, re-entering the space race, bringing accountability to government
+                    corruption, reforming the tax code, and more. Scroll down down for more in-depth information and sources.
+                  </p>
+                </div>
+              
+              </div>
             
             <h4 class="sub-heading">individual  agenda</h4>
             <div class="agenda-thesis">
