quick summary of vallorosis site

--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -67,6 +67,20 @@
 
             <br>
             <br>
+
+            <div id="myModal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <p>The quick summary for Candidate Vallorosi: Peter Vallorosi is an independent candidate for US Senate. He seems to be very focused on a 
+                    very pure application of the constitution and applying full transparency of government business through a regularly updated, single source 
+                    website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budged, reducing the size of 
+                    government, removing donor influence from politics, and much more. Scroll down down for more in-depth information and sources.
+                  </p>
+                </div>
+              
+              </div>
             
             <h4 class="sub-heading">individual  agenda</h4>
             <div class="agenda-thesis">
