added head nods to harshaw and vallorosi regarding communicating with us

--- a/child_pages/cc-elections/Candidates/harshaw.html
+++ b/child_pages/cc-elections/Candidates/harshaw.html
@@ -78,7 +78,8 @@
                     who was an international business law major and is certified in maritime law. He has very detailed information on his site regarding not only
                     his specific policy ideas, but also how he plans on achieving those policy ideas. His policy proposals range from rebuilding manufacturing, 
                     agriculture, and overall infrastructure, to investing in childhood education, re-entering the space race, bringing accountability to government
-                    corruption, reforming the tax code, and more. Scroll down down for more in-depth information and sources.
+                    corruption, reforming the tax code, and more. Harshaw was also very prompt and thorough while communicating with Inform the Vote. 
+                    Scroll down down for more in-depth information and sources.
                   </p>
                 </div>
               
