--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -76,7 +76,8 @@
                   <p>The quick summary for Candidate Vallorosi: Peter Vallorosi is an independent candidate for US Senate. He seems to be very focused on a 
                     very pure application of the constitution and applying full transparency of government business through a regularly updated, single source 
                     website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budged, reducing the size of 
-                    government, removing donor influence from politics, and much more. Scroll down down for more in-depth information and sources.
+                    government, removing donor influence from politics, and much more. Vallorosi was also very prompt with communicating with Inform the Vote.
+                    Scroll down down for more in-depth information and sources.
                   </p>
                 </div>
               
