summary and brief page update for bashaw

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -41,6 +41,29 @@
         </div>
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+
+        <br>
+        <br>
+
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>The quick summary for Candidate Bashaw: Candidate Bashaw is a self-described 'outsider' running in the Republican primary for US Senate. 
+                While he says he is an outsider, he does have a lot of well-documented leadership awards for serving in political related roles. He also has 
+                a lot of experience as a successful businessman in real estate and hospitality. He seems to have decided to jump directly into politics in 
+                response to the government's handling of COVID and how it affected small businesses. He wants to secure the border while revamping legal 
+                immigration policy to encourage legal immigration. While Inform the Vote has only briefly spoken to Bashaw, he has been hitting the campaign 
+                trail hard, which is well documented on Twitter/X. Scroll down for more in-depth information and sources.
+              </p>
+            </div>
+          
+          </div>
+
+          <br>
+          <br>
+
 <div class="container">
     <div class="title-info">
         <h2>Curtis Bashaw</h2>
@@ -99,11 +122,20 @@
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    In favor of the TikTok ban.
+                    <li><a href="https://twitter.com/Bashawforsenate/status/1782473866096353678" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a></li>
+                    <br>
+                    Strong support for Israel.
+                    <li><a href="https://twitter.com/Bashawforsenate/status/1782473870257131720" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a></li>
+                    <br>
+                    Believes in peace through strength.
+                    <li><a href="https://twitter.com/Bashawforsenate/status/1782473871490273515" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a></li>
+                    <br>
+                    Wants to keep taxes low.
+                    <li><a href="https://twitter.com/Bashawforsenate/status/17799449405309" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a></li>
+                    <br>
+                    Wants to lower energy prices while harnessing local resources.
+                    <li><a href="https://twitter.com/Bashawforsenate/status/1778835149037130160" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a></li>
                     <li></li>
                     <li></li>   
                     <li></li>
