update to murphys page with summary

--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -51,6 +51,10 @@
                 <div class="content-1">
                     <li class="link"><a href="timeline.html">Timeline</a></li>
 
+                    <br>
+                    <a href="https://newjerseyglobe.com/polling/republican-senate-candidates-remain-almost-entirely-unknown-per-emerson-poll/?fbclid=IwZXh0bgNhZW0CMTEAAR3_CvWTipOoUpFXIZ__mCYkhglDu21fbEvcc5-9piMw7Ovwz9bVRejei90_aem_Ac02_PPWhM7BlVSTjo5tHtQz4sB2fMrtDtspKaXwmKTPAb2-wKYcFpmSc0Sd4OldqWHOElQWzZrJTtegdhf70-Y3">NJ Globe article about unknown candidates</a>
+                    <br>
+
                     As a citizen who started with genuine curiosity about our upcoming election candidates,
                 I found myself increasingly concerned about the state of our local elections. The
                 concern eventually boils down to: Our citizens should be ‘fully informed’ rather than
