added campos-medinas campaign site as opposed to general website

--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -59,7 +59,8 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://patriciacamposmedina.com/" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Website</a>
+            <a href="https://patricia4senate.com/" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Website</a>
+            <a href="https://patriciacamposmedina.com/" target="_blank" rel="noopener noreferrer" class="website-link">General Website</a>
             <a href="https://www.facebook.com/DrCamposMedina" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
             <a href="https://twitter.com/DrCamposMedina" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
             <a href="https://www.youtube.com/channel/UC3C50cGRL2ROPNQsmRQ5uaQ" target="_blank" rel="noopener noreferrer" class="website-link">YouTube Channel</a>
